/**
 * 该文件为由脚本 `npm run test:demo` 自动生成，如需修改，执行脚本命令即可。请勿手写直接修改，否则会被覆盖
 */

import { mount } from '@vue/test-utils';
import baseVue from '@/src/checkbox/_example/base.vue';
import controlledVue from '@/src/checkbox/_example/controlled.vue';
import groupVue from '@/src/checkbox/_example/group.vue';
import linkVue from '@/src/checkbox/_example/link.vue';

const mapper = {
  baseVue,
  controlledVue,
  groupVue,
  linkVue,
};

describe('Checkbox', () => {
  Object.keys(mapper).forEach((demoName) => {
    it(`Checkbox ${demoName} demo works fine`, () => {
      const wrapper = mount(mapper[demoName]);
      expect(wrapper.element).toMatchSnapshot();
    });
  });
});
